frontend/test/should_fail/index_isin_same_argument_mismatch.grg
#using "index_count_model.gm"

rule i {
	n:N;

	if{ isInNodesFromIndexSame(n, fooi, new O()); }
	
	modify {
	}
}
